more fixes for spacing

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -69,6 +69,7 @@ h2 {	font-size: 36px;}
 	background-color: var(--prm-bg);
 	box-shadow: 2px 2px 3px rgba(0,0,0, .2);
 }
+.svc-clm { max-width: 400px;}
 section {
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -80,7 +81,7 @@ nav a i { vertical-align: text-top !important;}
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	flex-wrap: wrap;
+	flex-wrap: no-wrap;
 }
 .nav-item {
 	width: 50%;
